--- a/pages/booking.html
+++ b/pages/booking.html
@@ -21,7 +21,7 @@
 
     <div class="header-right">
       <nav>
-        <a href="../login.html"> &lt; Back to Home</a>
+        <a href="../index.html"> &lt; Back to Home</a>
       </nav>
     </div>
   </header>
